--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'prismjs/themes/prism-tomorrow.css';
+@import 'prismjs';
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,3 +22,5 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
